# gcp-final-task

./: .gitignore  Dockerfile  README.md  cloudbuild.yaml  pyproject.toml
alembic/: env.py
alembic/versions/: 9cc5c1c31603_create_items_table.py  dd60c33628db_create_inital_tables.py
kuber/: ingress.yaml  pod.yaml  service.yaml
src/: database.py  main.py
tests/: conftest.py  test_crud.py
