[tool.poetry]
name = "gcp-final-task"
version = "0.1.0"
description = ""
authors = ["Viktor Kozlov <soniclev@mail.ru>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
asyncio_mode = "auto"
env_files = [
    "test.env"
]

[tool.coverage.run]
omit = [
    "*tests*",
    "*/__init__.py",
]


[tool.poetry.dependencies]
python = "^3.10"
uvicorn = "^0.19.0"
fastapi = "^0.86.0"
psycopg2 = "^2.9.5"
alembic = "^1.8.1"
SQLAlchemy = "^1.4.41"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
pytest-asyncio = "^0.20.1"
coverage = "^6.4.1"
python-dotenv = "^0.21.0"
pytest-dotenv = "^0.5.2"
